--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.9.0
 click==8.1.7
 Flask==3.1.0
 Flask-JWT-Extended==4.7.1
+Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 flask-smorest==0.45.0
 Flask-SQLAlchemy==3.1.1
@@ -13,6 +14,7 @@ Mako==1.3.7
 MarkupSafe==3.0.2
 marshmallow==3.23.1
 packaging==24.2
+passlib==1.7.4
 PyJWT==2.10.1
 python-dotenv==1.0.1
 SQLAlchemy==2.0.36
