--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ alembic==1.14.0
 apispec==6.8.0
 blinker==1.9.0
 click==8.1.7
+dnspython==2.7.0
+email_validator==2.2.0
 Flask==3.1.0
 Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 flask-smorest==0.45.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.7
@@ -21,3 +25,4 @@ SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 webargs==8.6.0
 Werkzeug==3.1.3
+WTForms==3.2.1
