--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ blinker==1.9.0
 click==8.1.7
 dnspython==2.7.0
 email_validator==2.2.0
+Faker==33.1.0
 Flask==3.1.0
+Flask-Filter==0.1.2a3
 Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
@@ -20,7 +22,9 @@ marshmallow==3.23.1
 packaging==24.2
 passlib==1.7.4
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+six==1.17.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 webargs==8.6.0
