--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
 alembic==1.14.0
 apispec==6.8.0
 blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.12.14
+charset-normalizer==3.4.0
 click==8.1.7
 dnspython==2.7.0
 email_validator==2.2.0
 Faker==33.1.0
 Flask==3.1.0
 Flask-Filter==0.1.2a3
+flask-htmx==0.4.0
 Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 flask-smorest==0.45.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+google-api-core==2.24.0
+google-api-python-client==2.156.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.66.0
+httplib2==0.22.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -21,12 +31,23 @@ MarkupSafe==3.0.2
 marshmallow==3.23.1
 packaging==24.2
 passlib==1.7.4
+plotly==5.24.1
+proto-plus==1.25.0
+protobuf==5.29.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 PyJWT==2.10.1
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+requests==2.32.3
+rsa==4.9
 six==1.17.0
 SQLAlchemy==2.0.36
+tenacity==9.0.0
 typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
 webargs==8.6.0
 Werkzeug==3.1.3
 WTForms==3.2.1
