--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 alembic==1.14.0
+aniso8601==9.0.1
 apispec==6.8.0
+attrs==24.3.0
+beautifulsoup4==4.12.3
 blinker==1.9.0
 cachetools==5.5.0
 certifi==2024.12.14
@@ -14,24 +20,36 @@ flask-htmx==0.4.0
 Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
+Flask-RESTful==0.3.10
 flask-smorest==0.45.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+frozendict==2.4.6
+frozenlist==1.5.0
 google-api-core==2.24.0
 google-api-python-client==2.156.0
 google-auth==2.37.0
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.66.0
+html5lib==1.1
 httplib2==0.22.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+lxml==5.3.0
 Mako==1.3.7
 MarkupSafe==3.0.2
 marshmallow==3.23.1
+multidict==6.1.0
+multitasking==0.0.11
+numpy==2.2.1
 packaging==24.2
+pandas==2.2.3
 passlib==1.7.4
+peewee==3.17.8
+platformdirs==4.3.6
 plotly==5.24.1
+propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.2
 pyasn1==0.6.1
@@ -40,14 +58,20 @@ PyJWT==2.10.1
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
 rsa==4.9
 six==1.17.0
+soupsieve==2.6
 SQLAlchemy==2.0.36
 tenacity==9.0.0
 typing_extensions==4.12.2
+tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.3.0
 webargs==8.6.0
+webencodings==0.5.1
 Werkzeug==3.1.3
 WTForms==3.2.1
+yarl==1.18.3
+yfinance==0.2.51
