--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.2
 alembic==1.14.0
 aniso8601==9.0.1
 apispec==6.8.0
+APScheduler==3.11.0
 attrs==24.3.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
@@ -13,8 +14,10 @@ charset-normalizer==3.4.0
 click==8.1.7
 dnspython==2.7.0
 email_validator==2.2.0
+et_xmlfile==2.0.0
 Faker==33.1.0
 Flask==3.1.0
+Flask-APScheduler==1.13.1
 Flask-Filter==0.1.2a3
 flask-htmx==0.4.0
 Flask-JWT-Extended==4.7.1
@@ -43,6 +46,7 @@ marshmallow==3.23.1
 multidict==6.1.0
 multitasking==0.0.11
 numpy==2.2.1
+openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 passlib==1.7.4
@@ -67,6 +71,7 @@ SQLAlchemy==2.0.36
 tenacity==9.0.0
 typing_extensions==4.12.2
 tzdata==2024.2
+tzlocal==5.2
 uritemplate==4.1.1
 urllib3==2.3.0
 webargs==8.6.0
